...
                maximumFractionDigits = 0
            }
        }

    val textToShow =
        if (isPrivacyMode) {
            prefix + if (isCurrency) "₹ ****" else "****"
        } else {
            prefix +
                if (isCurrency) {
                    currencyFormat.format(amount)
                } else {
                    numberFormat.format(amount)
...
